musa/musa_v1_Service_minecraft-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server
  namespace: musa
spec:
  ports:
  - port: 25565
  selector:
    app: minecraft-server
  type: LoadBalancer
